# flutter_secure_storage

./: .codecov.yml  .gitignore  README.md  melos.yaml  pubspec.yaml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  code-coverage.yml  code-integration.yml  code-quality.yml  dependency-report.yml  stale-issues.yaml
.soups/dart/: flutter_secure_storage-10.x.x.json
archived_packages/flutter_secure_storage_macos/: pubspec.yaml
flutter_secure_storage/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter_secure_storage/android/: build.gradle
flutter_secure_storage/android/src/main/: AndroidManifest.xml
flutter_secure_storage/android/src/main/java/com/it_nomads/fluttersecurestorage/: FlutterSecureStorage.java  FlutterSecureStorageConfig.java  FlutterSecureStoragePlugin.java  MigrationBackup.java  NamespacedConfigSource.java  SecureStorageException.java  SecureStorageInitCallback.java  SharedPreferencesCallback.java
flutter_secure_storage/android/src/main/java/com/it_nomads/fluttersecurestorage/ciphers/: AESCipher23Implementation.java  BiometricCallback.java  KeyCipher.java  KeyCipherAlgorithm.java  KeyCipherFunction.java  KeyCipherImplementationAES23.java  KeyCipherImplementationRSA18.java  KeyCipherImplementationRSAOAEP.java  RSACipher18Implementation.java  RSACipherOAEPImplementation.java  StorageCipher18Implementation.java  StorageCipher23Implementation.java  StorageCipherAlgorithm.java  StorageCipherFactory.java  StorageCipherGCMImplementation.java  StorageCipherImplementationAES18.java  StorageCipherImplementationAES23.java  StorageCipherImplementationGCM.java
flutter_secure_storage/android/src/main/java/com/it_nomads/fluttersecurestorage/crypto/: MasterKey.java  MasterKeys.java
flutter_secure_storage/android/src/test/java/com/it_nomads/fluttersecurestorage/: FlutterSecureStorageConfigTest.java  MigrationBackupTest.java
flutter_secure_storage/android/src/test/java/com/it_nomads/fluttersecurestorage/ciphers/: CipherAlgorithmTest.java  StorageCipherFactoryTest.java  StorageCipherTest.java
flutter_secure_storage/example/: pubspec.yaml
flutter_secure_storage/example/android/: build.gradle  settings.gradle.kts
flutter_secure_storage/example/android/app/: build.gradle.kts
flutter_secure_storage/example/android/app/src/main/: AndroidManifest.xml
flutter_secure_storage/example/integration_test/: app_test.dart  linux_locked_keyring_test.dart  linux_test.dart  web_test.dart  windows_test.dart
flutter_secure_storage/example/ios/Runner/: Info.plist
flutter_secure_storage/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_secure_storage/example/lib/: main.dart
flutter_secure_storage/example/linux/: CMakeLists.txt
flutter_secure_storage/example/macos/RunnerTests/: RunnerTests.swift
flutter_secure_storage/example/windows/: CMakeLists.txt
flutter_secure_storage/example/windows/runner/: Runner.rc
flutter_secure_storage/ios/Classes/: FlutterSecureStorage.swift  SwiftFlutterSecureStoragePlugin.swift
flutter_secure_storage/lib/: flutter_secure_storage.dart
flutter_secure_storage/lib/options/: android_options.dart  apple_options.dart  ios_options.dart  macos_options.dart
flutter_secure_storage/lib/test/: test_flutter_secure_storage.dart  test_flutter_secure_storage_platform.dart
flutter_secure_storage/test/: flutter_secure_storage_test.dart
flutter_secure_storage_darwin/: CHANGELOG.md  README.md  pubspec.yaml
flutter_secure_storage_darwin/darwin/: flutter_secure_storage_darwin.podspec
flutter_secure_storage_darwin/darwin/flutter_secure_storage_darwin/: Package.swift
flutter_secure_storage_darwin/darwin/flutter_secure_storage_darwin/Sources/flutter_secure_storage_darwin/: FlutterSecureStorage.swift  FlutterSecureStorageDarwinPlugin.swift
flutter_secure_storage_linux/: CHANGELOG.md  README.md  pubspec.yaml
flutter_secure_storage_linux/linux/: CMakeLists.txt  flutter_secure_storage_linux_plugin.cc
flutter_secure_storage_linux/linux/include/: Secret.hpp
flutter_secure_storage_linux/linux/test/: flutter_secure_storage_linux_plugin_test.cc
flutter_secure_storage_platform_interface/: pubspec.yaml
flutter_secure_storage_platform_interface/lib/: flutter_secure_storage_platform_interface.dart
flutter_secure_storage_platform_interface/lib/src/: method_channel_flutter_secure_storage.dart
flutter_secure_storage_web/: CHANGELOG.md  pubspec.yaml
flutter_secure_storage_web/lib/: flutter_secure_storage_web.dart
flutter_secure_storage_web/test/: flutter_secure_storage_web_test.dart
flutter_secure_storage_windows/: CHANGELOG.md  pubspec.yaml
flutter_secure_storage_windows/example/: pubspec.yaml
flutter_secure_storage_windows/lib/src/: flutter_secure_storage_windows_ffi.dart  flutter_secure_storage_windows_stub.dart
flutter_secure_storage_windows/test/: unit_test.dart
flutter_secure_storage_windows/windows/: CMakeLists.txt  flutter_secure_storage_windows_plugin.cpp
flutter_secure_storage_windows/windows/test/: CMakeLists.txt
